force-app/main/default/objects/b3p__Portal__c/b3p__Portal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Portal</label>
</CustomObject>