force-app/main/default/objects/b3p__Portal__c/fields/b3p__API_Password__c.field-meta.xml
<CustomField>
    <fullName>b3p__API_Password__c</fullName>
    <label>DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>