force-app/main/default/objects/b3p__Portal__c/fields/b3p__Authorization_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>b3p__Authorization_Named_Credential__c</fullName>
    <defaultValue>&quot;AuthorizationService&quot;</defaultValue>
    <label>Authorization Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>