force-app/main/default/objects/b3p__Portal__c/fields/b3p__Expire_Session_Keys__c.field-meta.xml
<CustomField>
    <fullName>b3p__Expire_Session_Keys__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Time-box enforcement of session keys</inlineHelpText>
    <label>Expire Session Keys</label>
    <type>Checkbox</type>
</CustomField>