force-app/main/default/objects/b3p__Portal__c/fields/b3p__Google_Fonts_API_Key__c.field-meta.xml
<CustomField>
    <fullName>b3p__Google_Fonts_API_Key__c</fullName>
    <defaultValue>&quot;AIzaSyBOGFSrlFz70lBanuhxQ6Q0_kPM9rFz90k&quot;</defaultValue>
    <label>Google Fonts API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>