force-app/main/default/objects/b3p__Portal__c/fields/b3p__Portal_Magic_Link_Validity__c.field-meta.xml
<CustomField>
    <fullName>b3p__Portal_Magic_Link_Validity__c</fullName>
    <defaultValue>14</defaultValue>
    <inlineHelpText>How many days is a magic link valid for?</inlineHelpText>
    <label>Portal Magic Link Validity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>