force-app/main/default/objects/b3p__Portal__c/fields/b3p__Portals_are_SPA__c.field-meta.xml
<CustomField>
    <fullName>b3p__Portals_are_SPA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, portals will be rendered as a single page, without reloads between pages.</inlineHelpText>
    <label>Portals are SPA</label>
    <type>Checkbox</type>
</CustomField>