force-app/main/default/objects/b3p__Portal__c/fields/b3p__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>b3p__Site_URL__c</fullName>
    <label>Site URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>